--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.4
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.2
 gunicorn==20.0.4
 idna==2.10
 importlib-metadata==3.7.2
